# eco

./: .gitignore  =21.0  AGENT.md  README.md  pyproject.toml  run.py
adapter_core/: __init__.py  ai.py  base.py  human.py
adapter_core/autoplayer/: __init__.py  engine.py  npc_engine.py
adapter_core/input_source/: __init__.py  autoplay.py  base.py  factory.py  hybrid.py  player.py
adapters/ai/: __init__.py  ai.py  base.py  human.py  minimax_adapter.py  openai_adapter.py
adapters/autoplayer/: __init__.py  actions.py  engine.py  narrative_actions.py  npc_engine.py  (+1 more)
core/: cli.py
data/: actions.yaml  archetypes.yaml  essences.yaml  events.yaml
docs/: DEVELOPMENT_GUIDELINES.md  entities.md
game_core/: .env  .env.example  cli.py  config.py  run.py  tuning.yaml
player_core/: __init__.py
scripts/: audit_consolidated.py  audit_mvp.py  dev_workflow.py  spec_status.py  test_deps.py  test_integration.py
specs/: 00-index.md  03-player-echo.md  04-essences.md  05-ideas-doctrines.md  06-ideological-drift.md  07-actions.md  08-temporal-system.md  09-economy.md  10-factions.md  11-autoplayer.md  12-ai-integration.md  13-events.md  14-godot-contract.md  15-debugging.md  16-mvp.md  17-risks.md  18-game-definition.md  19-mvp-implementation.md  20-integration.md  21-testing-coverage.md  22-ai-manifesto.md  23-i18n.md  24-configuration.md  25-console-logging.md  26-dynamism.md  27-tuning-diminishing-returns.md  28-turn-system-npc-templates.md  29-world-state-metrics.md  30-living-circles.md  31-actions-with-consequences.md  32-echo-spawning.md  33-console-display.md  33-narrative-console.md  34-events-system.md  35-circle-system.md  36-player-input-system.md  40-event-categorization.md  41-tui.md  43-ui.md  44-domain-entities.md  (+12 more)
tests/: __init__.py  test_actions.py  test_adapter_core.py  test_adapter_integration.py  test_archetype_registry.py  test_crisis.py  test_defensive_error_handling.py  test_definitions.py  test_domain.py  test_essence_system.py  test_event_protocol.py  test_factory.py  test_goal_factory.py  test_goals.py  test_logging_integration.py  test_narrative_generator.py  test_new_entities.py  test_npc_integration.py
ui_core/: __init__.py  components.py  console.py  display.py  history.py  input.py  interface.py  layout.py  selector.py  session.py  styles.py
(+335 files in other folders)
