[project]
name = "eco-game-core"
version = "0.1.0"
description = "Headless engine for ECO memetic simulation"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pytest>=8.0",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "prompt_toolkit>=3.0.52",
]

[project.scripts]
eco-run = "game_core.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["game_core"]
