[project]
name = "eco-game-core"
version = "0.1.0"
description = "Headless engine for ECO memetic simulation"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "pytest>=8.0",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "prompt_toolkit>=3.0.52",
    "structlog>=25.0",
]

[project.scripts]
eco-run = "run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["game_core", "ui_core", "player_core"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # errors
    "W",      # warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger
    "ISC",    # flake8-implicit-str-concat
    "PGH",    # pygrep-hooks
    "PIE",    # flake8-pie
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "RET505",   # else-return (sometimes cleaner with else)
    "SIM108",   # ternary for side effects (not always cleaner)
    "TC001",    # Pydantic models need runtime imports for validation
    "TC003",    # Pydantic models need runtime imports for validation
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused OK in __init__
"specs/*.py" = ["ALL"]     # spec files not real code

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "ruff>=0.15.14",
]
